# newsly

./: Cargo.toml  LICENSE  README.md
src/: main.rs  news_scraper.rs  util.rs
src/sources/: al_jazeera.rs  bbc.rs  combinator.rs  guardian.rs  independent.rs  mod.rs
