[package]
name = "newsly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
reqwest = "0.11.16"
scraper = "0.16.0"
tokio = {version="1.27.0", features=["full"]}
tui = "0.19.0"
tabled = "0.12.0"
async-trait = "0.1.68"
simple_tables = "0.3.0"