[package]
name = "newsly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
reqwest = "0.11.16"
scraper = "0.16.0"
tokio = {version="1.27.0", features=["full"]}
async-trait = "0.1.68"
simple_tables = "0.3.0"
cursive = {version="0.20.0", features=["crossterm-backend"]}
terminal-link = "0.1.0"
rand = "0.8.5"
